add docker compose file

--- a/.env.example
+++ b/.env.example
@@ -5,21 +5,66 @@
 # 
 # Command: cp .env.example .env
 # Then edit: nano .env
+# 
+# Based on ERPNext v15.83.0 (latest stable as of October 2025)
+# Optimized for production deployment with host-level Nginx reverse proxy
 # =================================================================
+
+# =================================================================
+# PROJECT CONFIGURATION - REQUIRED
+# =================================================================
+# Docker Compose project name - used as prefix for containers and networks
+# Use lowercase letters, numbers, and hyphens only
+# This helps organize multiple ERPNext deployments on same server
+COMPOSE_PROJECT_NAME=erpnext-prod
+
+# Data storage path - where all persistent data will be stored
+# Ensure this directory exists and has proper permissions (1000:1000)
+# This path will contain: sites/, logs/, db/, redis_queue/
+DATA_PATH=./data
+
+# Timezone for all services (affects logs, scheduled tasks, etc.)
+# Use standard timezone identifiers (e.g., UTC, America/New_York, Europe/London)
+TIMEZONE=UTC
+
+# =================================================================
+# ERPNEXT APPLICATION CONFIGURATION - REQUIRED
+# =================================================================
+# ERPNext version - use specific version for production stability
+# Latest stable: v15.83.0 (updated October 15, 2025)
+# Check https://hub.docker.com/r/frappe/erpnext/tags for newer versions
+ERPNEXT_VERSION=15.83.0
+
+# Primary domain name for your ERPNext installation
+# This must match your DNS configuration and SSL certificate
+# Example: erp.yourcompany.com, erpnext.example.org
+# CRITICAL: This will be used to create the ERPNext site
+SITE_NAME=your-domain.com
+
+# ERPNext administrator password
+# This will be the password for the Administrator user
+# Minimum 12 characters, use strong password with mixed case, numbers, symbols
+ADMIN_PASSWORD=your_admin_password_min_12_chars_change_this
 
 # =================================================================
 # DATABASE CONFIGURATION - REQUIRED
 # =================================================================
-# MariaDB/MySQL root password - use a strong, unique password
-# Minimum 16 characters with mixed case, numbers, and symbols
-DB_ROOT_PASSWORD=your_very_secure_root_password_here_min_16_chars
+# MariaDB version - use LTS version for stability
+# 10.11 is the current LTS with long-term support until 2028
+DB_VERSION=10.11
+
+# MariaDB root password - use a very strong password
+# This is the master password for database administration
+# Minimum 20 characters with mixed case, numbers, and symbols
+DB_ROOT_PASSWORD=your_very_secure_root_password_here_min_20_chars_change_this
 
 # Application database password - different from root password
 # This is used by ERPNext to connect to the database
-DB_PASSWORD=your_secure_app_database_password_here
+# Should be different from root password for security
+DB_PASSWORD=your_secure_app_database_password_here_change_this
 
 # Database name for ERPNext
-# Convention: use project_environment format (e.g., erpnext_prod)
+# Convention: use descriptive name (e.g., erpnext_production, erp_company)
 DB_NAME=erpnext_production
 
 # Database user for ERPNext application
@@ -28,6 +73,7 @@ DB_USER=erpnext_user
 
 # Database host - use service name from docker-compose.yml
 # Default: 'db' (matches the database service name)
+# Only change if you're using external database
 DB_HOST=db
 
 # Database port - standard MySQL/MariaDB port
@@ -35,187 +81,146 @@ DB_HOST=db
 DB_PORT=3306
 
 # =================================================================
-# ERPNEXT APPLICATION CONFIGURATION - REQUIRED
+# DATABASE PERFORMANCE TUNING - OPTIONAL
 # =================================================================
-# Primary domain name for your ERPNext installation
-# This must match your DNS configuration and SSL certificate
-# Example: erp.yourcompany.com or erpnext.example.org
-SITE_NAME=your-domain.com
+# MariaDB InnoDB buffer pool size - critical for performance
+# Set to 70-80% of dedicated database server RAM
+# For shared servers, set to 25-50% of total RAM
+# Examples: 1G, 2G, 4G, 8G
+DB_INNODB_BUFFER_POOL_SIZE=2G
 
-# ERPNext administrator password
-# This will be the password for the Administrator user
-# Use a strong password with minimum 12 characters
-ADMIN_PASSWORD=your_admin_password_min_12_chars
+# InnoDB log file size - affects write performance
+# Larger values improve write performance but increase recovery time
+# Recommended: 256M to 1G for production systems
+DB_INNODB_LOG_FILE_SIZE=256M
 
-# ERPNext secret key for encryption and security
-# Generate a random 32+ character string
-# You can use: openssl rand -hex 32
-SECRET_KEY=your_32_plus_character_random_secret_key_for_encryption
+# Maximum database connections
+# Increase for high-traffic sites, decrease for resource-constrained servers
+# Each connection uses memory, balance with available RAM
+DB_MAX_CONNECTIONS=200
 
-# ERPNext version tag - specify exact version for production
-# Check available versions: https://hub.docker.com/r/frappe/erpnext/tags
-# Examples: v14.27.0, v13.45.0 (avoid 'latest' in production)
-ERPNEXT_VERSION=v14.27.0
-
-# =================================================================
-# REVERSE PROXY CONFIGURATION - REQUIRED
-# =================================================================
-# Virtual host for nginx proxy integration
-# Usually same as SITE_NAME unless you have complex proxy setup
-VIRTUAL_HOST=${SITE_NAME}
-
-# Let's Encrypt configuration for SSL certificates
-# Domain for SSL certificate (usually same as SITE_NAME)
-LETSENCRYPT_HOST=${SITE_NAME}
-
-# Email for Let's Encrypt notifications and certificate management
-# Use a valid email address that you monitor regularly
-LETSENCRYPT_EMAIL=admin@yourcompany.com
+# Query cache size - improves read performance for repeated queries
+# Set to 0 to disable, or 64M-256M for moderate traffic
+# Note: Query cache is deprecated in newer MySQL versions
+DB_QUERY_CACHE_SIZE=64M
 
 # =================================================================
-# PERFORMANCE AND SCALING - OPTIONAL
+# REDIS CONFIGURATION - OPTIONAL
 # =================================================================
-# Number of worker processes for ERPNext
-# Recommended: Number of CPU cores (check with: nproc)
-# Default: 4 (suitable for 4+ core systems)
-WORKER_PROCESSES=4
+# Redis version - use stable version with security updates
+# Version 7 includes performance improvements and security fixes
+REDIS_VERSION=7-alpine
 
-# Maximum worker connections per process
-# Higher values support more concurrent users
-# Default: 1024 (suitable for medium traffic)
-MAX_WORKER_CONNECTIONS=1024
-
-# Redis memory limit for caching
-# Adjust based on available system memory
+# Redis cache memory limit - for session and object caching
+# Should be sufficient for your concurrent user count
 # Examples: 256mb, 512mb, 1gb, 2gb
-REDIS_MAXMEMORY=512mb
+REDIS_CACHE_MAXMEMORY=512mb
 
-# Redis eviction policy when memory limit is reached
-# Recommended: allkeys-lru (removes least recently used keys)
-REDIS_MAXMEMORY_POLICY=allkeys-lru
-
-# =================================================================
-# BACKUP CONFIGURATION - RECOMMENDED
-# =================================================================
-# Backup schedule in cron format (when automatic backups run)
-# Default: 0 2 * * * (daily at 2:00 AM server time)
-# Examples: 0 1 * * * (1 AM), 30 3 * * 0 (Sunday 3:30 AM)
-BACKUP_SCHEDULE=0 2 * * *
-
-# Number of backup files to retain (older backups are deleted)
-# Recommended: 7-30 days depending on your backup strategy
-# Consider disk space and compliance requirements
-BACKUP_RETENTION=7
-
-# Backup storage location (relative to project root)
-# This directory will store database dumps and site backups
-BACKUP_PATH=./backups
+# Redis queue memory limit - for background jobs
+# Usually smaller than cache, jobs are processed quickly
+# Examples: 128mb, 256mb, 512mb
+REDIS_QUEUE_MAXMEMORY=256mb
 
 # =================================================================
-# LOGGING AND MONITORING - OPTIONAL
+# APPLICATION PERFORMANCE TUNING - OPTIONAL
 # =================================================================
-# Log level for ERPNext application
-# Options: DEBUG, INFO, WARNING, ERROR, CRITICAL
-# Production recommended: WARNING or ERROR
-LOG_LEVEL=WARNING
+# ERPNext backend worker processes
+# Recommended: Number of CPU cores available to container
+# More workers = better concurrent request handling
+BACKEND_WORKERS=4
 
-# Maximum log file size before rotation
-# Examples: 10m, 50m, 100m (megabytes)
+# Gunicorn worker class - affects performance characteristics
+# sync: Simple, stable, good for most workloads
+# gevent: Async, better for I/O-heavy workloads
+# tornado: WebSocket support (if needed)
+WORKER_CLASS=sync
+
+# Request timeout in seconds
+# Increase for complex reports or large data operations
+# Default 300 (5 minutes) should be sufficient for most operations
+BACKEND_TIMEOUT=300
+
+# Maximum file upload size
+# Increase if you need to upload large files (documents, images, etc.)
+# Format: 50m (50 megabytes), 1g (1 gigabyte)
+MAX_UPLOAD_SIZE=50m
+
+# Proxy timeout for frontend nginx
+# Should match or exceed BACKEND_TIMEOUT
+PROXY_TIMEOUT=300
+
+# =================================================================
+# CONTAINER RESOURCE LIMITS - RECOMMENDED
+# =================================================================
+# ERPNext Backend Resource Limits
+# Adjust based on your server capacity and expected load
+BACKEND_CPU_LIMIT=2.0              # Number of CPU cores
+BACKEND_MEMORY_LIMIT=4G            # Maximum memory usage
+BACKEND_CPU_RESERVE=0.5            # Reserved CPU cores
+BACKEND_MEMORY_RESERVE=1G          # Reserved memory
+
+# ERPNext Frontend Resource Limits
+# Frontend is lighter as it only serves static files and proxies requests
+FRONTEND_CPU_LIMIT=1.0
+FRONTEND_MEMORY_LIMIT=1G
+FRONTEND_CPU_RESERVE=0.25
+FRONTEND_MEMORY_RESERVE=256M
+
+# WebSocket Server Resource Limits
+# WebSocket handles real-time communications
+WEBSOCKET_CPU_LIMIT=0.5
+WEBSOCKET_MEMORY_LIMIT=512M
+
+# Database Resource Limits
+# Database typically needs significant resources for good performance
+DB_CPU_LIMIT=2.0
+DB_MEMORY_LIMIT=4G
+DB_CPU_RESERVE=0.5
+DB_MEMORY_RESERVE=1G
+
+# Redis Resource Limits
+# Separate limits for cache and queue Redis instances
+REDIS_CPU_LIMIT=1.0
+REDIS_CACHE_MEMORY_LIMIT=1G
+REDIS_QUEUE_MEMORY_LIMIT=512M
+
+# =================================================================
+# NETWORK CONFIGURATION - ADVANCED
+# =================================================================
+# Frontend port for host reverse proxy connection
+# Change this if port 8080 conflicts with existing applications
+# Your host Nginx should proxy to this port
+FRONTEND_PORT=8080
+
+# Docker network subnets - change if conflicts with existing networks
+# Frontend network: Connects to host reverse proxy
+FRONTEND_SUBNET=172.20.0.0/24
+
+# Backend network: Internal service communication only
+BACKEND_SUBNET=172.21.0.0/24
+
+# =================================================================
+# SECURITY CONFIGURATION - RECOMMENDED
+# =================================================================
+# Development mode - NEVER enable in production
+# Enables debug features and detailed error messages
+# WARNING: Exposes sensitive information, only use in development
+DEVELOPER_MODE=0
+
+# Enable detailed logging for troubleshooting
+# Set to 1 only when debugging issues, impacts performance
+DEBUG_LOGGING=0
+
+# =================================================================
+# LOGGING CONFIGURATION - RECOMMENDED
+# =================================================================
+# Docker log rotation settings
+# Maximum size before log rotation (prevents disk space issues)
 LOG_MAX_SIZE=10m
 
 # Number of rotated log files to keep
 # Balances disk usage with debugging capability
 LOG_MAX_FILES=5
-
-# Enable detailed SQL query logging (for debugging only)
-# WARNING: This can log sensitive data and affect performance
-# Only enable temporarily for troubleshooting
-# Values: true, false
-SQL_DEBUG=false
-
-# =================================================================
-# SECURITY CONFIGURATION - OPTIONAL BUT RECOMMENDED
-# =================================================================
-# Session timeout in seconds
-# Default: 3600 (1 hour) - adjust based on security requirements
-# Shorter timeouts are more secure but less convenient
-SESSION_TIMEOUT=3600
-
-# Maximum login attempts before account lockout
-# Helps prevent brute force attacks
-# Default: 5 attempts
-MAX_LOGIN_ATTEMPTS=5
-
-# Account lockout duration in seconds after failed login attempts
-# Default: 300 (5 minutes)
-LOCKOUT_DURATION=300
-
-# Enable two-factor authentication by default for new users
-# Highly recommended for production environments
-# Values: true, false
-ENABLE_2FA_DEFAULT=true
-
-# =================================================================
-# DOCKER RESOURCE LIMITS - OPTIONAL BUT RECOMMENDED
-# =================================================================
-# Memory limit for ERPNext application container
-# Adjust based on your system's available memory
-# Examples: 2g, 4g, 8g (gigabytes)
-ERPNEXT_MEMORY_LIMIT=4g
-
-# CPU limit for ERPNext application (number of CPUs)
-# Examples: 1.0, 2.0, 4.0 (number of CPU cores)
-ERPNEXT_CPU_LIMIT=2.0
-
-# Memory limit for database container
-# Database typically needs significant memory for performance
-# Examples: 1g, 2g, 4g (gigabytes)
-DB_MEMORY_LIMIT=2g
-
-# CPU limit for database container
-# Examples: 1.0, 2.0 (number of CPU cores)
-DB_CPU_LIMIT=1.0
-
-# =================================================================
-# DEVELOPMENT AND TESTING - OPTIONAL
-# =================================================================
-# Enable development mode (only use in non-production environments)
-# This enables debug features and detailed error messages
-# WARNING: Never enable in production as it exposes sensitive information
-# Values: true, false
-DEVELOPER_MODE=false
-
-# Enable bench command access (for maintenance and development)
-# Allows running bench commands from within containers
-# Values: true, false
-ENABLE_BENCH=false
-
-# =================================================================
-# NOTIFICATIONS AND INTEGRATIONS - OPTIONAL
-# =================================================================
-# SMTP server configuration for email notifications
-# Leave blank to disable email features
-MAIL_SERVER=
-MAIL_PORT=587
-MAIL_USE_TLS=true
-MAIL_USERNAME=
-MAIL_PASSWORD=
-
-# Webhook URL for system notifications (Slack, Discord, etc.)
-# Leave blank to disable webhook notifications
-WEBHOOK_URL=
-
-# =================================================================
-# CUSTOM CONFIGURATION - OPTIONAL
-# =================================================================
-# Custom apps to install (comma-separated list)
-# Examples: payments,hrms,ecommerce
-# Leave blank to install only ERPNext
-CUSTOM_APPS=
-
-# Custom themes or configurations
-# Path to custom configuration files
-CUSTOM_CONFIG_PATH=
 
 # =================================================================
 # USAGE INSTRUCTIONS
