--- a/.env.example
+++ b/.env.example
@@ -19,13 +19,30 @@
 COMPOSE_PROJECT_NAME=erpnext-prod
 
 # Data storage path - where all persistent data will be stored
-# Ensure this directory exists and has proper permissions (1000:1000)
+# Ensure this directory exists and has proper permissions
 # This path will contain: sites/, logs/, db/, redis_queue/
 DATA_PATH=./data
 
 # Timezone for all services (affects logs, scheduled tasks, etc.)
 # Use standard timezone identifiers (e.g., UTC, America/New_York, Europe/London)
 TIMEZONE=UTC
+
+# =================================================================
+# DOCKER USER CONFIGURATION - IMPORTANT
+# =================================================================
+# Docker container user ID and group ID
+# This MUST match a user on your host system for proper file permissions
+# Default: 1000:1000 (common first user on Linux systems)
+# Change if UID 1000 is not available or conflicts on your server
+DOCKER_USER_ID=1000
+DOCKER_GROUP_ID=1000
+
+# Example: If you created user 'erpnext' with UID 1001:
+# DOCKER_USER_ID=1001
+# DOCKER_GROUP_ID=1001
+# 
+# To find your user's UID: id -u username
+# To find your user's GID: id -g username
 
 # =================================================================
 # ERPNEXT APPLICATION CONFIGURATION - REQUIRED
