documents the email and secret generation

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,23 @@
 # =================================================================
 
 # =================================================================
+# GENERATE SECURE PASSWORDS
+# =================================================================
+# Run these commands to generate secure random passwords:
+#
+# Generate all secrets at once:
+#   echo "ADMIN_PASSWORD=$(openssl rand -base64 16 | tr -d '=+/' | cut -c1-16)"
+#   echo "DB_ROOT_PASSWORD=$(openssl rand -base64 24 | tr -d '=+/' | cut -c1-24)"
+#
+# Or generate individually:
+#   openssl rand -base64 16 | tr -d '=+/' | cut -c1-16  # For ADMIN_PASSWORD
+#   openssl rand -base64 24 | tr -d '=+/' | cut -c1-24  # For DB_ROOT_PASSWORD
+#
+# Alternative using /dev/urandom:
+#   tr -dc 'A-Za-z0-9!@#$%' </dev/urandom | head -c 20; echo
+# =================================================================
+
+# =================================================================
 # PROJECT CONFIGURATION - REQUIRED
 # =================================================================
 # Docker Compose project name - used as prefix for containers and networks
@@ -60,7 +77,8 @@ SITE_NAME=your-domain.com
 # ERPNext administrator password (minimum 8 characters)
 # This will be the password for the Administrator user
 # Use a strong password with mixed case, numbers, and symbols
-ADMIN_PASSWORD=your_admin_password_change_this
+# Generate with: openssl rand -base64 16 | tr -d '=+/' | cut -c1-16
+ADMIN_PASSWORD=CHANGE_ME_GENERATE_SECURE_PASSWORD
 
 # Site name header configuration
 # Default: $$host (resolves site by HTTP Host header)
@@ -78,8 +96,8 @@ DB_VERSION=10.6
 
 # MariaDB root password - use a very strong password
 # This is the master password for database administration
-# Generate with: openssl rand -base64 32
-DB_ROOT_PASSWORD=your_very_secure_root_password_change_this
+# Generate with: openssl rand -base64 24 | tr -d '=+/' | cut -c1-24
+DB_ROOT_PASSWORD=CHANGE_ME_GENERATE_SECURE_PASSWORD
 
 # Database host and port
 # Default: 'db' (matches the database service name)
@@ -255,18 +273,9 @@ LOG_MAX_FILES=5
 # - Configure host Nginx with SSL (see SETUP.md)
 # - Point DNS to your server
 # - Update SITE_NAME to match your domain
-# =================================================================
-
-# =================================================================
-# UPGRADING FROM v15
-# =================================================================
-# 1. Backup your data:
-#    docker compose exec backend bench --site <site> backup --with-files
-# 2. Stop services: docker compose down
-# 3. Update ERPNEXT_VERSION in this file
-# 4. Start services: docker compose up -d
-# 5. Run migrations:
-#    docker compose exec backend bench --site <site> migrate
-# 6. Clear cache:
-#    docker compose exec backend bench --site <site> clear-cache
+#
+# For email configuration:
+# - Email settings are configured in ERPNext after deployment
+# - See SETUP.md for SMTP configuration instructions
+# - The SMTP variables above are for reference when configuring
 # =================================================================
