--- a/.env.example
+++ b/.env.example
@@ -148,8 +148,28 @@ REDIS_QUEUE_MAXMEMORY=256mb
 FRONTEND_PORT=8080
 
 # Upstream real IP configuration (for proper client IP logging)
-# Set to your reverse proxy's IP address
-UPSTREAM_REAL_IP_ADDRESS=127.0.0.1
+# IMPORTANT: Set this to the Docker gateway IP or reverse proxy IP
+# From the container's perspective, requests from host Nginx come from the gateway IP
+#
+# HOW TO DETERMINE THIS VALUE:
+# 1. For host-level Nginx (most common - same server as Docker):
+#    REQUIRED: Find your Docker gateway IP:
+#      docker network inspect erpnext-prod_network | grep Gateway
+#    OR after starting containers:
+#      docker network inspect $(docker inspect erpnext-prod_frontend --format '{{range .NetworkSettings.Networks}}{{.Gateway}}{{end}}')
+#    
+#    Typical values: 172.18.0.1, 172.17.0.1, or similar
+#    You MUST update this after creating the network!
+#
+# 2. For external reverse proxy (different server):
+#    - Use the actual IP address of your reverse proxy server
+#    - Example: 192.168.1.10 or 10.0.0.5
+#
+# 3. To trust all proxies (less secure, testing/development only):
+#    - Set to: 0.0.0.0/0
+#
+# TEMPORARY: Set to 0.0.0.0/0 for initial setup, then update with actual gateway IP
+UPSTREAM_REAL_IP_ADDRESS=0.0.0.0/0
 
 # Header containing the real client IP
 UPSTREAM_REAL_IP_HEADER=X-Forwarded-For
