fix command to get nginx ip

--- a/.env.example
+++ b/.env.example
@@ -153,10 +153,16 @@ FRONTEND_PORT=8080
 #
 # HOW TO DETERMINE THIS VALUE:
 # 1. For host-level Nginx (most common - same server as Docker):
-#    REQUIRED: Find your Docker gateway IP:
+#    REQUIRED: Find your Docker gateway IP after starting containers:
+#    
+#    Option A - Simple grep method:
 #      docker network inspect erpnext-prod_network | grep Gateway
-#    OR after starting containers:
-#      docker network inspect $(docker inspect erpnext-prod_frontend --format '{{range .NetworkSettings.Networks}}{{.Gateway}}{{end}}')
+#    
+#    Option B - Direct from container:
+#      docker inspect erpnext-dmla-prod_frontend --format '{{range .NetworkSettings.Networks}}{{.Gateway}}{{end}}'
+#    
+#    Option C - JSON parsing:
+#      docker network inspect erpnext-prod_network -f '{{range .IPAM.Config}}{{.Gateway}}{{end}}'
 #    
 #    Typical values: 172.18.0.1, 172.17.0.1, or similar
 #    You MUST update this after creating the network!
